# rust-fullstack-template

./: .gitignore  README.md  Trunk.toml
.github/workflows/: feature-branch.yml
backend/: Cargo.toml  config.toml  test_secrets.toml
backend/src/: lib.rs  main.rs
backend/src/config/: config.rs  mod.rs  secrets.rs
backend/src/server/: handler.rs  server.rs
backend/tests/: integration_test.rs  setup.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: example.rs
