[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
toml = "0.8.0"

common = { version = "0.1.0", path = "../common" }
