[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.0"
warp = "0.3"

common = { version = "0.1.0", path = "../common" }

[dev-dependencies]
lazy_static = "1.4.0"
