[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.1", features = ["multipart", "tracing"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.0"
tracing-subscriber = "0.3.7"

common = { version = "0.1.0", path = "../common" }

[dev-dependencies]
lazy_static = "1.4.0"
