[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
reqwest = { version = "0.11", features = ["json"] }
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen-futures = "0.4.1"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
